manifests/dhbw-seminarbeit-receivedata-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dhbw-seminarbeit-receivedata-ingress
spec:
  rules:
  - host: receive.co2ampel.example.internal
    http:
      paths:
      - path: /values
        pathType: Exact
        backend:
          serviceName: dhbw-seminarbeit-receivedata 
          servicePort: 4000
